docs and gradle changes